better default seed color

--- a/scheme.less
+++ b/scheme.less
@@ -14,7 +14,7 @@
 ///////////////////////////
 
 // This color is used to generate the scheme
-@seed-color:#5186b8;
+@seed-color:#ed8c2b;
 
 //// Color wheel positions
 ///////////////////////////
